assets/blocks: remove side padding from richtext block so alignes with other content fixes #93

--- a/adhocracy-plus/assets/scss/components/_blocks.scss
+++ b/adhocracy-plus/assets/scss/components/_blocks.scss
@@ -234,7 +234,7 @@ $block-padding-md: 7.5*$padding;
 }
 
 .block-paragraph {
-    @extend .p-3;
+    @extend .py-3;
 }
 
 .block-download {
